--- a/FarmProduce/Views/Home/Index.cshtml
+++ b/FarmProduce/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                 <table width="100%" align="center" cellpadding="0px" cellspacing="0px" border="1">
                     <tr>
                         <td width="33.3%">
-                            <img src="01_ali_logo.png">
+                         
                         </td>
                         <td width="33.3%"></td>
                         <td width="33.3%" align="center">
@@ -28,26 +28,10 @@
                 </table>
             </td>
         </tr>
-        <tr style="height: 50px">
-            <td bgcolor="#ff8c00" style="border: 1px solid red">
-                <a href="#" style="padding: 50px">
-                    <span style="font-size: 25px;color: white;">首页</span>
-                    <a href="#" style="padding: 50px">
-                        <span style="font-size: 20px;color: white;">电子数码</span>
-                        <a href="#" style="padding: 50px">
-                            <span style="font-size: 20px;color: white;">电脑办公</span>
-                            <a href="#" style="padding: 50px">
-                                <span style="font-size: 20px;color: white;">运动户外</span>
-                                <a href="#" style="padding: 50px">
-                                    <span style="font-size: 20px;color: white;">衣服家具</span>
-                                    <a href="#" style="padding: 50px">
-                                        <span style="font-size: 20px;color: white;">生活用品</span>
-                                        <a href="#" style="padding: 50px"><span style="font-size: 20px;color: white;">浏览历史</span>
-            </td>
-        </tr>
+
         <tr>
             <td>
-                <img src="https://s1.tuchong.com/content-image/201805/bb6532bae9f17785ab3191642bd9b292.jpg" width="100%">
+                <img src="~/img/bg.jpg" width="100%" height="200px;" />
             </td>
         </tr>
         <tr>
@@ -192,24 +176,7 @@
                 <img src="https://img.alicdn.com/simba/img/TB1J.BIcWmWBuNkHFJHSuuatVXa.jpg" width="100%">
             </td>
         </tr>
-        <tr>
-            <td align="center">
-                <br>
-                <a href="#">关于淘宝</a>
-                <a href="#">合作伙伴</a>
-                <a href="#">营销中心</a>
-                <a href="#">廉正举报</a>
-                <a href="#">联系客服</a>
-                <a href="#">开放平台</a>
-                <a href="#">诚征英才</a>
-                <a href="#">联系我们</a>
-                <a href="#">网站地图</a>
-                <a href="#">法律声明</a>
-                <a href="#">知识产权</a>
-                <br>
-                <p>© 2003-现在 Taobao.com 版权所有</p>
-            </td>
-        </tr>
+        
     </table>
 </body>
 </html>
